tests/snapshots/tests__semicolons@ambiguous-syntax.lua.snap
---
source: tests/tests.rs
expression: formatted
input_file: tests/inputs-semicolons/ambiguous-syntax.lua
---
local baz = foo(bar);
(foo and x or y)(bar);

function foobar()
	local baz = foo(bar);
	(baz and x or y)(bar);
end

