tests/snapshots/tests__semicolons@anonymous-function.lua.snap
---
source: tests/tests.rs
expression: formatted
input_file: tests/inputs-semicolons/anonymous-function.lua
---
local foo = function(bar, baz)
	print(foo);
end;
call(function(x, y)
	local x = test;
end);

