tests/snapshots/tests__semicolons@assignment.lua.snap
---
source: tests/tests.rs
expression: formatted
input_file: tests/inputs-semicolons/assignment.lua
---
local foo = "bar";
local bar, baz = 1, 2;

