tests/snapshots/tests__semicolons@block-empty-lines.lua.snap
---
source: tests/tests.rs
expression: formatted
input_file: tests/inputs-semicolons/block-empty-lines.lua
---
function foo()
	local x = 1;

	return true;
end

function bar()
	return;
end

do
	-- comment
	local x = 1;

	local foo = bar;

	-- comment
end

