tests/snapshots/tests__semicolons@comments-indented-block.lua.snap
---
source: tests/tests.rs
expression: formatted
input_file: tests/inputs-semicolons/comments-indented-block.lua
---
function foo()
	local x = 1;
	local y = 1;

	-- comment
end

if foo then
	local x = 1;
	-- comment
end

