tests/snapshots/tests__semicolons@comments-multiline-expression-2.lua.snap
---
source: tests/tests.rs
expression: formatted
input_file: tests/inputs-semicolons/comments-multiline-expression-2.lua
---
-- https://github.com/JohnnyMorganz/StyLua/issues/386
repeat
	x = x + 1;
until z * (
		x + y -- comment
	);

repeat
	x = x + 1;
until z * (
		x + y -- comment
	) < 2;

